mise a jour des tests frontend et backend